Fixed overlapping active link styling.

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -66,6 +66,7 @@ footer {
     text-align: center;
     padding:0 7vw;
     background-color: #3c6eb421;
+    position: relative;
 }
 
 fieldset {
